--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -15,12 +15,13 @@ button::-moz-focus-inner {
   text-align: center;
   border: 1px solid #0066cc;
   border-radius: 4px;
-  padding: 7px 8px;
+  padding: 8px 9px;
   cursor: pointer;
   user-select: none;
   text-decoration: none;
   touch-action: manipulation;
   box-sizing: border-box;
+  text-transform: none;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -57,7 +58,7 @@ button::-moz-focus-inner {
 }
 .tef-button.small {
   font-size: 11px;
-  padding: 7px;
+  padding: 6px 9px;
 }
 .tef-button.small [data-icon]:before,
 .tef-button.small ::content [data-icon]:before {
@@ -80,23 +81,6 @@ button::-moz-focus-inner {
 .tef-button.large span,
 .tef-button.large ::content span {
   font-size: 24px;
-}
-.tef-button .colors-loop.neutral {
-  background-color: #84959e;
-  color: white;
-  border-color: #84959e;
-}
-.tef-button .colors-loop.neutral:hover,
-.tef-button .colors-loop.neutral:focus {
-  background-color: #768993;
-  color: white;
-  border-color: #768993;
-}
-.tef-button .colors-loop.neutral:active,
-.tef-button .colors-loop.neutral.active {
-  background-color: #697c86;
-  color: white;
-  border-color: #697c86;
 }
 .tef-button .colors-loop.significant {
   background-color: #ff9900;
@@ -165,23 +149,6 @@ button::-moz-focus-inner {
   background-color: #7aa329;
   color: white;
   border-color: #7aa329;
-}
-.tef-button.neutral {
-  background-color: #84959e;
-  color: white;
-  border-color: #84959e;
-}
-.tef-button.neutral:hover,
-.tef-button.neutral:focus {
-  background-color: #768993;
-  color: white;
-  border-color: #768993;
-}
-.tef-button.neutral:active,
-.tef-button.neutral.active {
-  background-color: #697c86;
-  color: white;
-  border-color: #697c86;
 }
 .tef-button.significant {
   background-color: #ff9900;
