--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -10,7 +10,7 @@ button::-moz-focus-inner {
   background-color: #0066cc;
   color: white;
   font-size: 15px;
-  line-height: normal;
+  line-height: 18px;
   font-weight: normal;
   text-align: center;
   border: 1px solid #0066cc;
@@ -39,46 +39,67 @@ button::-moz-focus-inner {
   background-color: #004c99;
   border-color: #004c99;
 }
-.tef-button [data-icon]:before,
-.tef-button ::content [data-icon]:before {
+.tef-button [data-icon]:before {
   position: relative;
   font-size: 23px;
   line-height: 0;
   top: 4px;
 }
 .tef-button [data-icon] + span,
+.tef-button span + [data-icon] {
+  margin-left: 5px;
+}
+.tef-button span {
+  font-size: 15px;
+}
+.tef-button ::content [data-icon]:before {
+  position: relative;
+  font-size: 23px;
+  line-height: 0;
+  top: 4px;
+}
 .tef-button ::content [data-icon] + span,
-.tef-button span + [data-icon],
 .tef-button ::content span + [data-icon] {
   margin-left: 5px;
 }
-.tef-button span,
 .tef-button ::content span {
   font-size: 15px;
 }
 .tef-button.small {
   font-size: 11px;
+  line-height: 13px;
   padding: 6px 9px;
 }
-.tef-button.small [data-icon]:before,
+.tef-button.small [data-icon]:before {
+  font-size: 18px;
+  top: 3px;
+}
+.tef-button.small span {
+  font-size: 11px;
+}
 .tef-button.small ::content [data-icon]:before {
   font-size: 18px;
   top: 3px;
 }
-.tef-button.small span,
 .tef-button.small ::content span {
   font-size: 11px;
 }
 .tef-button.large {
   font-size: 24px;
+  line-height: 29px;
   padding: 7px 14px;
 }
-.tef-button.large [data-icon]:before,
+.tef-button.large [data-icon]:before {
+  font-size: 32px;
+  top: 5px;
+}
+.tef-button.large span {
+  font-size: 24px;
+}
 .tef-button.large ::content [data-icon]:before {
   font-size: 32px;
   top: 5px;
 }
-.tef-button.large span,
 .tef-button.large ::content span {
   font-size: 24px;
 }
