--- a/less/variables.less
+++ b/less/variables.less
@@ -2,10 +2,10 @@
 // Variables
 //
 
-// Theme colors
 // Keep 4 spaces before @ in order to do a correct
 // valiable replacement for Web Components
 
+// Theme colors
     @color: #0066cc;
     @text: white;
     @border: @color;
@@ -73,6 +73,7 @@
 // Other properties
     @shadow: 0 2px 6px rgba(0,0,0,0.3);
     @shadowReverse: 0 -2px 6px rgba(0,0,0,0.3);
+    @radius: 4px;
 
 // Breakpoints
     @widthXS: 480px;
