--- a/templates/variables.less
+++ b/templates/variables.less
@@ -2,10 +2,10 @@
 @import "../less/variables.less";
 //
 
-// Theme colors
 // Keep 4 spaces before @ in order to do a correct
 // valiable replacement for Web Components
 
+// Theme colors
 .CoreStyle-color { fake-property: #0066cc; }
 .CoreStyle-text { fake-property: white; }
 .CoreStyle-border { fake-property: @color; }
@@ -73,6 +73,7 @@
 // Other properties
 .CoreStyle-shadow { fake-property: 0 2px 6px rgba(0,0,0,0.3); }
 .CoreStyle-shadowReverse { fake-property: 0 -2px 6px rgba(0,0,0,0.3); }
+.CoreStyle-radius { fake-property: 4px; }
 
 // Breakpoints
 .CoreStyle-widthXS { fake-property: 480px; }
