removed data- in icons

--- a/css/components/headers.css
+++ b/css/components/headers.css
@@ -107,7 +107,7 @@
 .tef-header li a:active span {
   text-decoration: underline;
 }
-.tef-header li [data-icon] {
+.tef-header li [icon] {
   color: #a175c4;
   padding-left: 4px;
   font-size: 16px;
