--- a/css/components/tables.css
+++ b/css/components/tables.css
@@ -18,7 +18,7 @@
 .tef-table thead th {
   border-left: 1px solid #ccc;
 }
-.tef-table thead [data-icon] {
+.tef-table thead [icon] {
   color: #ff9900;
   padding-left: 10px;
 }
