--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -39,27 +39,27 @@ button::-moz-focus-inner {
   background-color: #004c99;
   border-color: #004c99;
 }
-.tef-button [data-icon]:before {
+.tef-button [icon]:before {
   position: relative;
   font-size: 23px;
   line-height: 0;
   top: 4px;
 }
-.tef-button [data-icon] + span,
-.tef-button span + [data-icon] {
+.tef-button [icon] + span,
+.tef-button span + [icon] {
   margin-left: 5px;
 }
 .tef-button span {
   font-size: 15px;
 }
-.tef-button ::content [data-icon]:before {
+.tef-button ::content [icon]:before {
   position: relative;
   font-size: 23px;
   line-height: 0;
   top: 4px;
 }
-.tef-button ::content [data-icon] + span,
-.tef-button ::content span + [data-icon] {
+.tef-button ::content [icon] + span,
+.tef-button ::content span + [icon] {
   margin-left: 5px;
 }
 .tef-button ::content span {
@@ -70,14 +70,14 @@ button::-moz-focus-inner {
   line-height: 13px;
   padding: 6px 9px;
 }
-.tef-button.small [data-icon]:before {
+.tef-button.small [icon]:before {
   font-size: 18px;
   top: 3px;
 }
 .tef-button.small span {
   font-size: 11px;
 }
-.tef-button.small ::content [data-icon]:before {
+.tef-button.small ::content [icon]:before {
   font-size: 18px;
   top: 3px;
 }
@@ -89,14 +89,14 @@ button::-moz-focus-inner {
   line-height: 29px;
   padding: 7px 14px;
 }
-.tef-button.large [data-icon]:before {
+.tef-button.large [icon]:before {
   font-size: 32px;
   top: 5px;
 }
 .tef-button.large span {
   font-size: 24px;
 }
-.tef-button.large ::content [data-icon]:before {
+.tef-button.large ::content [icon]:before {
   font-size: 32px;
   top: 5px;
 }
