--- a/css/web_components/tef_button.css
+++ b/css/web_components/tef_button.css
@@ -1,8 +1,8 @@
-button::-moz-focus-inner {
+html /deep/ button::-moz-focus-inner {
   border: none;
   outline: none;
 }
-.tef-button {
+html /deep/ .tef-button {
   display: inline-block;
   vertical-align: middle;
   min-width: 35px;
@@ -26,128 +26,128 @@ button::-moz-focus-inner {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.tef-button:hover,
-.tef-button:focus {
+html /deep/ .tef-button:hover,
+html /deep/ .tef-button:focus {
   color: white;
   background-color: #0059b3;
   border-color: #0059b3;
   outline: none;
 }
-.tef-button:active,
-.tef-button.active {
+html /deep/ .tef-button:active,
+html /deep/ .tef-button.active {
   color: white;
   background-color: #004c99;
   border-color: #004c99;
 }
-.tef-button [icon]:before {
+html /deep/ .tef-button [icon]:before {
   position: relative;
   font-size: 23px;
   line-height: 0;
   top: 4px;
 }
-.tef-button [icon] + span,
-.tef-button span + [icon] {
+html /deep/ .tef-button [icon] + span,
+html /deep/ .tef-button span + [icon] {
   margin-left: 5px;
 }
-.tef-button span {
+html /deep/ .tef-button span {
   font-size: 15px;
 }
-.tef-button.small {
+html /deep/ .tef-button.small {
   font-size: 11px;
   line-height: 13px;
   padding: 6px 9px;
 }
-.tef-button.small [icon]:before {
+html /deep/ .tef-button.small [icon]:before {
   font-size: 18px;
   top: 3px;
 }
-.tef-button.small span {
+html /deep/ .tef-button.small span {
   font-size: 11px;
 }
-.tef-button.large {
+html /deep/ .tef-button.large {
   font-size: 24px;
   line-height: 29px;
   padding: 7px 14px;
 }
-.tef-button.large [icon]:before {
+html /deep/ .tef-button.large [icon]:before {
   font-size: 32px;
   top: 5px;
 }
-.tef-button.large span {
+html /deep/ .tef-button.large span {
   font-size: 24px;
 }
-.tef-button.positive {
+html /deep/ .tef-button.positive {
   background-color: #99cc33;
   color: white;
   border-color: #99cc33;
 }
-.tef-button.positive:hover,
-.tef-button.positive:focus {
+html /deep/ .tef-button.positive:hover,
+html /deep/ .tef-button.positive:focus {
   background-color: #8ab82e;
   color: white;
   border-color: #8ab82e;
 }
-.tef-button.positive:active,
-.tef-button.positive.active {
+html /deep/ .tef-button.positive:active,
+html /deep/ .tef-button.positive.active {
   background-color: #7aa329;
   color: white;
   border-color: #7aa329;
 }
-.tef-button.negative {
+html /deep/ .tef-button.negative {
   background-color: #b00000;
   color: white;
   border-color: #b00000;
 }
-.tef-button.negative:hover,
-.tef-button.negative:focus {
+html /deep/ .tef-button.negative:hover,
+html /deep/ .tef-button.negative:focus {
   background-color: #970000;
   color: white;
   border-color: #970000;
 }
-.tef-button.negative:active,
-.tef-button.negative.active {
+html /deep/ .tef-button.negative:active,
+html /deep/ .tef-button.negative.active {
   background-color: #7d0000;
   color: white;
   border-color: #7d0000;
 }
-.tef-button.subdued {
+html /deep/ .tef-button.subdued {
   background-color: #999999;
   color: white;
   border-color: #999999;
 }
-.tef-button.subdued:hover,
-.tef-button.subdued:focus {
+html /deep/ .tef-button.subdued:hover,
+html /deep/ .tef-button.subdued:focus {
   background-color: #8c8c8c;
   color: white;
   border-color: #8c8c8c;
 }
-.tef-button.subdued:active,
-.tef-button.subdued.active {
+html /deep/ .tef-button.subdued:active,
+html /deep/ .tef-button.subdued.active {
   background-color: #808080;
   color: white;
   border-color: #808080;
 }
-.tef-button.significant {
+html /deep/ .tef-button.significant {
   background-color: #ff9900;
   color: white;
   border-color: #ff9900;
 }
-.tef-button.significant:hover,
-.tef-button.significant:focus {
+html /deep/ .tef-button.significant:hover,
+html /deep/ .tef-button.significant:focus {
   background-color: #e68a00;
   color: white;
   border-color: #e68a00;
 }
-.tef-button.significant:active,
-.tef-button.significant.active {
+html /deep/ .tef-button.significant:active,
+html /deep/ .tef-button.significant.active {
   background-color: #cc7a00;
   color: white;
   border-color: #cc7a00;
 }
-.tef-button.block {
+html /deep/ .tef-button.block {
   display: block;
   width: 100%;
 }
-.tef-button + .tef-button {
+html /deep/ .tef-button + .tef-button {
   margin-left: 6px;
 }
