Added variables to set the images paths for tef-header

--- a/templates/variables.less
+++ b/templates/variables.less
@@ -71,6 +71,8 @@
 .CoreStyle-headerText { fake-property: white; }
 .CoreStyle-headerIcon { fake-property: #a175c4; }
 .CoreStyle-headerReverse { fake-property: @headerNav; }
+.CoreStyle-headerBg { fake-property: url('../theme_vivo/images/bg.jpg'); }
+.CoreStyle-headerLogo { fake-property: url('../theme_vivo/images/logo.png'); }
 
 // Other properties
 .CoreStyle-shadow { fake-property: 0 2px 6px rgba(0,0,0,0.3); }
