--- a/less/variables.less
+++ b/less/variables.less
@@ -71,6 +71,8 @@
     @headerText: white;
     @headerIcon: #a175c4;
     @headerReverse: @headerNav;
+    @headerBg: url('../theme_vivo/images/bg.jpg');
+    @headerLogo: url('../theme_vivo/images/logo.png');
 
 // Other properties
     @shadow: 0 2px 6px rgba(0,0,0,0.3);
