--- a/templates/variables.css
+++ b/templates/variables.css
@@ -166,6 +166,12 @@ CoreStyle.g.headerIcon =
 CoreStyle.g.headerReverse =
   "#660099";
 
+CoreStyle.g.headerBg =
+  "url('../theme_vivo/images/bg.jpg')";
+
+CoreStyle.g.headerLogo =
+  "url('../theme_vivo/images/logo.png')";
+
 CoreStyle.g.shadow =
   "0 2px 6px rgba(0, 0, 0, 0.3)";
 
