--- a/less/theme.less
+++ b/less/theme.less
@@ -2,33 +2,32 @@
 // Theme vivo
 //
 
-@import "../../utils/less/reset.less";
-
 // Global styles
 * { font-family: "Arial", sans-serif; }
 
 // Components
-@import '../../grid/less/grid.less';
-@import '../../buttons/less/buttons.less';
-@import '../../button-groups/less/button-groups.less';
-@import '../../inputs/less/inputs.less';
-@import '../../dropdowns/less/dropdowns.less';
-@import '../../radios/less/radios.less';
-@import '../../checkboxes/less/checkboxes.less';
-@import '../../modals/less/modals.less';
-@import '../../headers/less/headers.less';
-@import '../../sidebars/less/sidebars.less';
-@import '../../tabs/less/tabs.less';
-@import '../../toolbars/less/toolbars.less';
-@import '../../tables/less/tables.less';
-@import '../../tooltips/less/tooltips.less';
-@import '../../lists/less/lists.less';
+@import '../utils/reset.less';
+@import '../utils/mixins.less';
+@import '../grid/grid.less';
+@import '../buttons/buttons.less';
+@import '../inputs/inputs.less';
+@import '../dropdowns/dropdowns.less';
+@import '../radios/radios.less';
+@import '../checkboxes/checkboxes.less';
+@import '../modals/modals.less';
+@import '../headers/headers.less';
+@import '../sidebars/sidebars.less';
+@import '../tabs/tabs.less';
+@import '../toolbars/toolbars.less';
+@import '../tables/tables.less';
+@import '../tooltips/tooltips.less';
+@import '../lists/lists.less';
 
 // Variables
 @import 'variables.less';
 
 // Overrides
-.tef-header {
+.tc-header {
   border-bottom: 1px solid #e8e8e8;
   background: white;
 
