updated grunt tasks

--- a/templates/variables.less
+++ b/templates/variables.less
@@ -91,4 +91,4 @@
 
 // Grid variables
 .CoreStyle-gutter { fake-property: 16px; }
-.CoreStyle-columnGutter { fake-property: @gutter / 2; }
+.CoreStyle-data-columnGutter { fake-property: @gutter / 2; }
