--- a/templates/variables.css
+++ b/templates/variables.css
@@ -202,6 +202,6 @@ CoreStyle.g.widthMax =
 CoreStyle.g.gutter =
   "16px";
 
-CoreStyle.g.columnGutter =
+CoreStyle.g.data-columnGutter =
   "8px";
 
