removed wrong variables in grid

--- a/less/variables.less
+++ b/less/variables.less
@@ -2,93 +2,90 @@
 // Variables
 //
 
-// Keep 4 spaces before @ in order to do a correct
-// valiable replacement for Web Components
-
 // Theme colors
-    @color: #0066cc;
-    @text: white;
-    @border: @color;
-    @colorHover: darken(@color,5%);
-    @textHover: @text;
-    @borderHover: @colorHover;
-    @colorActive: darken(@color,10%);
-    @textActive: @text;
-    @borderActive: @colorActive;
+@color: #0066cc;
+@text: white;
+@border: @color;
+@colorHover: darken(@color,5%);
+@textHover: @text;
+@borderHover: @colorHover;
+@colorActive: darken(@color,10%);
+@textActive: @text;
+@borderActive: @colorActive;
 
-    @positive: #99cc33;
-    @positiveText: @text;
-    @positiveBorder: @positive;
-    @positiveHover: darken(@positive,5%);
-    @positiveTextHover: @positiveText;
-    @positiveBorderHover: @positiveHover;
-    @positiveActive: darken(@positive,10%);
-    @positiveTextActive: @positiveText;
-    @positiveBorderActive: @positiveActive;
+@positive: #99cc33;
+@positiveText: @text;
+@positiveBorder: @positive;
+@positiveHover: darken(@positive,5%);
+@positiveTextHover: @positiveText;
+@positiveBorderHover: @positiveHover;
+@positiveActive: darken(@positive,10%);
+@positiveTextActive: @positiveText;
+@positiveBorderActive: @positiveActive;
 
-    @negative: #b00000;
-    @negativeText: @text;
-    @negativeBorder: @negative;
-    @negativeHover: darken(@negative,5%);
-    @negativeTextHover: @negativeText;
-    @negativeBorderHover: @negativeHover;
-    @negativeActive: darken(@negative,10%);
-    @negativeTextActive: @negativeText;
-    @negativeBorderActive: @negativeActive;
+@negative: #b00000;
+@negativeText: @text;
+@negativeBorder: @negative;
+@negativeHover: darken(@negative,5%);
+@negativeTextHover: @negativeText;
+@negativeBorderHover: @negativeHover;
+@negativeActive: darken(@negative,10%);
+@negativeTextActive: @negativeText;
+@negativeBorderActive: @negativeActive;
 
-    @subdued: #999;
-    @subduedText: @text;
-    @subduedBorder: @subdued;
-    @subduedHover: darken(@subdued,5%);
-    @subduedTextHover: @subduedText;
-    @subduedBorderHover: @subduedHover;
-    @subduedActive: darken(@subdued,10%);
-    @subduedTextActive: @subduedText;
-    @subduedBorderActive: @subduedActive;
+@subdued: #999;
+@subduedText: @text;
+@subduedBorder: @subdued;
+@subduedHover: darken(@subdued,5%);
+@subduedTextHover: @subduedText;
+@subduedBorderHover: @subduedHover;
+@subduedActive: darken(@subdued,10%);
+@subduedTextActive: @subduedText;
+@subduedBorderActive: @subduedActive;
 
-    @significant: #ff9900;
-    @significantText: @text;
-    @significantBorder: @significant;
-    @significantHover: darken(@significant,5%);
-    @significantTextHover: @significantText;
-    @significantBorderHover: @significantHover;
-    @significantActive: darken(@significant,10%);
-    @significantTextActive: @significantText;
-    @significantBorderActive: @significantActive;
+@significant: #ff9900;
+@significantText: @text;
+@significantBorder: @significant;
+@significantHover: darken(@significant,5%);
+@significantTextHover: @significantText;
+@significantBorderHover: @significantHover;
+@significantActive: darken(@significant,10%);
+@significantTextActive: @significantText;
+@significantBorderActive: @significantActive;
 
-    @warning: #f0ad4e;
+@warning: #f0ad4e;
 
 // Common colors
-    @grey1: #f2f2f2;
-    @grey2: #cfcece;
-    @grey3: #b3b5b7;
-    @grey4: #aeadad;
-    @grey5: #686868;
-    @grey6: #31313d;
+@grey1: #f2f2f2;
+@grey2: #cfcece;
+@grey3: #b3b5b7;
+@grey4: #aeadad;
+@grey5: #686868;
+@grey6: #31313d;
 
 // Header
-    @headerNav: #660099;
-    @headerText: white;
-    @headerIcon: #a175c4;
-    @headerReverse: @headerNav;
-    @headerBg: url('../theme_vivo/images/bg.jpg');
-    @headerLogo: url('../theme_vivo/images/logo.png');
+@headerNav: #660099;
+@headerText: white;
+@headerIcon: #a175c4;
+@headerReverse: @headerNav;
+@headerBg: url('../theme_vivo/images/bg.jpg');
+@headerLogo: url('../theme_vivo/images/logo.png');
 
 // Other properties
-    @shadow: 0 2px 6px rgba(0,0,0,0.3);
-    @shadowReverse: 0 -2px 6px rgba(0,0,0,0.3);
-    @radius: 4px;
+@shadow: 0 2px 6px rgba(0,0,0,0.3);
+@shadowReverse: 0 -2px 6px rgba(0,0,0,0.3);
+@radius: 4px;
 
 // Breakpoints
-    @widthXS: 480px;
-    @widthSM: 768px;
-    @widthMD: 992px;
-    @widthLG: 1167px;
+@widthXS: 480px;
+@widthSM: 768px;
+@widthMD: 992px;
+@widthLG: 1167px;
 
 // Min and Max widths
-    @widthMin: 320px;
-    @widthMax: @widthLG;
+@widthMin: 320px;
+@widthMax: @widthLG;
 
 // Grid variables
-    @gutter: 16px;
-    @data-columnGutter: @gutter / 2;
+@gutter: 16px;
+@columnGutter: @gutter / 2;
